--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ python: "3.6.5"
 cache: pip
 install: pip install -r requirements.txt
 script: python test_orders.py
+
+after success: 
+ - coveralls
