--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
   - "3.7"
 # command to install dependencies
-install:
+before_script:
+  - easy_install distribute
   - pip install -r requirements.txt
-
 script:
     - pytest tests --cov=api --cov-report term-missing
 
