--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
-  - "3.7"
-# command to install dependencies
-before_script:
-  
-  - pip install -r requirements.txt
+
+python: 
+    - "3.6"
+
+install:
+    - pip install -r requirements.txt
+
 script:
     - pytest tests --cov=api --cov-report term-missing
 
