--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ install:
     - pip install -r requirements.txt
 
 script:
-    - pytest tests --cov=api --cov-report term-missing
-
+    - pytest tests --cov=api --cov-report 
 after_success:
     - coveralls
