--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
     - pip install -r requirements.txt
 
 script:
-    - pytest tests --cov=api --cov-report 
+    - pytest tests 
 after_success:
     - coveralls
