--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
 
 install:
     - pip install -r requirements.txt
-
+before_script:
+  - psql -c 'create database fast-food-fast-db;' -U postgres
 script:
     - pytest tests 
 after_success:
