--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ before_script:
   - psql -c 'create database fast-food-fast-db;' -U postgres
 script:
     - pytest tests 
+services:
+  - postgresql
+addons:
+  postgresql: "10.0"
 after_success:
     - coveralls
