--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,13 @@ script:
 services:
   - postgresql
 addons:
-  postgresql: "10.0"
+  postgresql: "10"
+  apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+env:
+  global:
+  - PGPORT=5433
 after_success:
     - coveralls
