--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
 install:
     - pip install -r requirements.txt
 before_script:
-  - psql -u postgres -h 127.0.0.1
-  - psql -c 'create database fast-food-fast-db;' -U postgres
+  - psql -c "CREATE DATABASE fast-food-fast-db;" -U postgres
+  - psql -c "CREATE USER postgres WITH PASSWORD 'postgres';" -U postgres
 script:
     - pytest tests 
 services:
