--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ python:
 install:
     - pip install -r requirements.txt
 before_script:
-  - psql -c "CREATE DATABASE fast-food-fast-db;" -U postgres
-  - psql -c "CREATE USER postgres WITH PASSWORD 'postgres';" -U postgres
+  - psql -c 'create database travis_ci_test;' -U postgres
 script:
     - pytest tests 
 services:
