chore-#160868693 travis CI postgres setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
     - pip install -r requirements.txt
 before_script:
-  - psql -c 'create database fast-food-fast-db;' -U postgres
+  - psql -c 'create database fast_food_fast;' -U postgres
 script:
     - pytest tests 
 services:
