--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
     - pip install -r requirements.txt
 before_script:
   - psql -c 'create database fast_food_fast;' -U postgres
+  - python api/v2/init_db.py
 script:
     - pytest tests 
 services:
