--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 install:
     - pip install -r requirements.txt
 before_script:
-  - psql -c 'create database fast_food_fast;' -U postgres
+  - psql -c 'create database fast_food_fast_db;' -U postgres
+  - psql -c 'create database test_fast_food_fast' -U postgres
   - python api/v2/init_db.py
 script:
     - pytest tests 
