--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,14 @@ install:
 before_script:
   - psql -c 'create database fast_food_fast_db;' -U postgres
   - python api/v2/init_db.py
+  - psql -c 'CREATE TABLE IF NOT EXISTS users (
+            email VARCHAR(255) PRIMARY KEY ,
+            user_id VARCHAR(255) UNIQUE,
+            user_name VARCHAR(255) NOT NULL,
+            user_password_hash VARCHAR(255) NOT NULL,
+            user_type VARCHAR(15) NOT NULL,
+            user_token VARCHAR(255)
+        )'
   - psql -c 'create database test_fast_food_fast' -U postgres
   - python api/v2/init_db.py
 script:
