--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
         )'
   - psql -c 'create database test_fast_food_fast' -U postgres
   - python api/v2/init_db.py
+  - psql -c '\dt'
 script:
     - pytest tests 
 services:
