--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
  - pip install -r requirements.txt
 before_script:
   - psql -c 'create database test_fast_food_fast' -U postgres
-  - python api/v2/init_db.py
+  - psql -c 'create database fast_food_fast_db' -U postgres
   - psql -c '\dt'
 script:
     - pytest tests 
