--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
  - pip install -r requirements.txt
 before_script:
   - psql -c 'create database test_fast_food_fast;' -U postgres
-  - psql -c '\dt'
+  - psql -c '\l'
   - psql -c '\conninfo'
 script:
     - pytest tests 
