--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
  - pip install -r requirements.txt
 before_script:
-  - psql -u postgres --password="" < tests/v2/travis.sql
+  - psql -U postgres --password="" < tests/v2/travis.sql
   - psql -c '\l'
   - psql -c '\conninfo'
 script:
