--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
 before_script:
   - psql -U postgres < tests/v2/travis.sql
   - psql -c '\l'
+  - psql -c '\dp test_fast-food_fast'
   - psql -c '\conninfo'
 script:
     - pytest tests 
