--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - psql -U postgres < tests/v2/travis.sql
 script:
     - pytest tests 
+    - psql -c '\dt'
 services:
   - postgresql
 after_success:
