--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ PyJWT==1.6.4
 pylint==2.1.1
 pytest==3.8.0
 pytest-flask==0.12.0
+python-dotenv==0.9.1
 PyYAML==3.13
 six==1.11.0
 Werkzeug==0.14.1
